<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:hint="@string/search_dialog_hint_company"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:hint="@string/search_dialog_hint_model"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:hint="@string/search_dialog_hint_year"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_male"
            android:layout_width="@dimen/gender_icon_size"
            android:layout_height="@dimen/gender_icon_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:button="@drawable/ic_gender_male"
            android:checked="true"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/cb_female"
            android:layout_width="@dimen/gender_icon_size"
            android:layout_height="@dimen/gender_icon_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:button="@drawable/ic_gender_female"
            android:checked="true"
            android:gravity="center"/>

        <CheckBox
            android:id="@+id/cb_unisex"
            android:layout_width="@dimen/gender_icon_size"
            android:layout_height="@dimen/gender_icon_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:button="@drawable/ic_gender_unisex"
            android:checked="true"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>